--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.75"
 deflate = "1.0.0"
-inflate = "0.4.5"
+flate2 = "1.0.27"
 memmem = { version = "0.1.1" }
 byteorder = { version = "1.4.3" }
 widestring = "1.0.2"
