--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ memmem = { version = "0.1.1" }
 byteorder = { version = "1.4.3" }
 widestring = "1.0.2"
 thiserror = "1.0.39"
+derive-debug = "0.1.2"
